--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-opencv-python>=4.8.1.78
-numpy==1.25.2
-matplotlib==3.8.1
-pygam==0.8.0
-bresenham==0.2.1
-scipy==1.10.1
-pytz==2023.3.post1
+streamlit>=1.21.0
+numpy>=1.20.0
+matplotlib>=3.5.0
+opencv-python>=4.5.0
+scipy>=1.7.0
+pygam>=0.8.0
+pillow>=8.0.0
+bresenham>=0.2.0
